--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<h1>Hii</h1>
+<app-header></app-header>
 <div class="mt-5"></div>
 <!-- <app-products></app-products> -->
 <!-- <app-home></app-home> -->
- <app-suggested-products></app-suggested-products>
-  <!-- <app-product></app-product> -->
-   <!-- <app-product-details></app-product-details> -->
+ <!-- <app-suggested-products></app-suggested-products>
+  <app-product></app-product>
+   <app-product-details></app-product-details>
+    <router-outlet></router-outlet> -->
+   
+<main>
+    <router-outlet></router-outlet>
+</main>
+<!-- <app-footer></app-footer> -->
